--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yenni Yepes | Belleza & Estilo</title>
+    <title>Yenny Yepes | Belleza & Estilo</title>
 
     <!-- FAVICON -->
     <link rel="icon" href="image/logo yeni.ico" type="image/x-icon">
@@ -18,7 +18,7 @@
     
     <!-- ENCABEZADO -->
     <header>
-        <h1>Yenni Yepes</h1>
+        <h1>Yenny Yepes</h1>
         <p>Belleza, Estilo y Elegancia</p>
     </header>
 
@@ -126,7 +126,7 @@
 
     <!-- PIE DE PÁGINA -->
     <footer>
-        <p>© 2026 Yenni Yepes - Todos los derechos reservados</p>
+        <p>© 2026 Yenny Yepes - Todos los derechos reservados</p>
     </footer>
 
     <!-- BOTÓN WHATSAPP -->
@@ -137,4 +137,5 @@
 
 </body>
 </html>
+
 
