--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
 <!-- SOBRE MI -->
 <section class="sobre-mi">
   <details>
+    <h2>Diseño profesional de cejas y pestañas</h2>
+
+      <p>
+        Soy Yeni Yepes, especialista en diseño de cejas y pestañas,
+        ofreciendo servicios personalizados para realzar tu belleza natural.
+      </p>
+
+      <p>
+        También cuento con un catálogo de productos como perfumes,
+        gorras, relojes y accesorios, todos seleccionados con calidad y estilo.
+      </p>
+
+      <p>
+        Trabajo con dedicación, higiene y productos de alta calidad
+        para brindarte una experiencia segura y profesional.
+      </p>
     <summary>💖 Conoce más sobre Yenny Yepes</summary>
     <div class="contenido">
       <p>Especialista en cejas y pestañas, con atención personalizada y productos de calidad.</p>
@@ -231,3 +247,4 @@ cargarReseñas();
 
 </body>
 </html>
+
